--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "express": "^4.18.1",
     "jest": "^27.5.1",
     "jest-extended": "^2.0.0",
-    "pg-format": "^1.0.4"
+    "pg-format": "^1.0.4",
+    "pg": "^8.7.3"
   },
   "devDependencies": {
     "dotenv": "^16.0.0",
     "husky": "^8.0.1",
     "jest-sorted": "^1.0.14",
-    "pg": "^8.7.3",
     "supertest": "^6.2.3"
   },
   "jest": {
