--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "jest": "^27.5.1",
     "jest-extended": "^2.0.0",
     "pg-format": "^1.0.4",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "dotenv": "^16.0.0"
   },
   "devDependencies": {
-    "dotenv": "^16.0.0",
     "husky": "^8.0.1",
     "jest-sorted": "^1.0.14",
     "supertest": "^6.2.3"
