--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
   },
   "homepage": "https://github.com/northcoders/be-nc-games#readme",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "jest": "^27.5.1",
     "jest-extended": "^2.0.0",
-    "pg-format": "^1.0.4",
     "pg": "^8.7.3",
-    "dotenv": "^16.0.0"
+    "pg-format": "^1.0.4"
   },
   "devDependencies": {
     "husky": "^8.0.1",
